--- a/Tienda-v1L/src/main/resources/messages.properties
+++ b/Tienda-v1L/src/main/resources/messages.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=Looney Tunes
+aplicacion.titulo=Tienda
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
@@ -32,14 +32,14 @@ login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
 plantilla.categorias=Categorias
-plantilla.derechos=Tienda Looney Tunes Derechos Reservados 2023
+plantilla.derechos=Tienda Derechos Reservados 2024
 plantilla.productos=Productos
 plantilla.pruebas=Pruebas
 plantilla.idioma=Idioma
 plantilla.asociaciones=Asociaciones
 plantilla.consultas=Consultas
 plantilla.reportes=Reportes
-plantilla.suTienda=Looney tunes su tienda en l\u00ednea
+plantilla.suTienda= su tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
