--- a/Tienda-v1L/src/main/resources/messages_en.properties
+++ b/Tienda-v1L/src/main/resources/messages_en.properties
@@ -31,6 +31,7 @@ login.login=Authenticate
 login.password=Password
 login.username=User
 plantilla.bienvenido=User
+producto.pruebas=Test
 plantilla.categorias=Categories
 plantilla.derechos=TechShop All Rights Reserved 2024
 plantilla.productos=Products
