--- a/Tienda-v1L/src/main/resources/messages_es.properties
+++ b/Tienda-v1L/src/main/resources/messages_es.properties
@@ -6,7 +6,7 @@ accion.nuevo=Nuevo
 accion.recordar=Recordar
 accion.registrar=Registrar
 accion.regresar=Regresar
-aplicacion.titulo=Tienda Looney Tunes
+aplicacion.titulo=Tienda
 carrito.cantidad=Cantidad
 carrito.datos=Datos del Producto
 carrito.facturar=Facturar
@@ -31,15 +31,16 @@ login.login=Autenticar
 login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
+producto.pruebas=Pruebas
 plantilla.categorias=Categorias
-plantilla.derechos=Tienda Loooney Tunes Derechos Reservados 2024
+plantilla.derechos=Tienda Derechos Reservados 2024
 plantilla.productos=Productos
 plantilla.pruebas=Pruebas
 plantilla.idioma=Idioma
 plantilla.asociaciones=Asociaciones
 plantilla.consultas=Consultas
 plantilla.reportes=Reportes
-plantilla.suTienda=Tienda Looney Tunes en l\u00ednea
+plantilla.suTienda=Tienda en l\u00ednea
 plantilla.troles=Roles
 plantilla.tusuario=Usuario
 plantilla.usuarios=Usuarios
